docs: Improve README

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@watchers/withings",
   "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "vercel dev --listen 3003"
   },
   "author": "Madeline Cameron <maddie@qnzl.co>",
   "license": "GPL-3.0-or-later",
