--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "@qnzl/withings",
   "version": "1.0.0",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "vercel dev --listen 3003"
+  "bin": {
+    "typeform": "bin/withings.js"
   },
-  "author": "Madeline Cameron <maddie@qnzl.co>",
+  "scripts": {
+    "build": "pkg bin/withings.js --out-path pkg/"
+  },
+  "author": "Madeline <maddie@qnzl.co>",
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "@qnzl/auth": "^1.0.13",
